[package]
name = "rust-advent-of-code-2022"
version = "1.0.0"
authors = ["Jay Fleischer <jayhf614@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true

